tests/assets/test_suites/w3c_wsdl20/documents/bad/InterfaceFault-1B/InterfaceFault.wsdl
<?xml version="1.0" encoding="UTF-8"?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/bad/InterfaceFault-1B/InterfaceFault.wsdl -->
<!-- Copyright © 2007-03-23 05:51 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<wsdl:description targetNamespace="http://example.org/"
	xmlns:tns="http://example.org/"
	xmlns:wsdl="http://www.w3.org/ns/wsdl"
	xmlns:xs="http://www.w3.org/2001/XMLSchema">

	<wsdl:documentation>
		This test shows an invalid use of an interface fault.
		An element specified for an interface fault must
		resolve to an element declaration.
		
		This document violates assertion InterfaceFault-1017.
	</wsdl:documentation>

	<wsdl:interface name="myInterface2">
		<wsdl:fault name="myFault" element="tns:myElement">
		</wsdl:fault>
	</wsdl:interface>

</wsdl:description>
